log
Wed 15 May 2024 05:13:36 PM UTC: 
 tests:  0|5
total_score: 0/70
29e4124
Wed 15 May 2024 05:30:59 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 43 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:18: error: unused variable ‘num’ [-Werror=unused-variable]
   47 |    int i, j , k, num;
      |                  ^~~
cc1: all warnings being treated as errors
Compilation failed
3c7a399
Wed 15 May 2024 05:31:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
cdcd22c
Wed 15 May 2024 05:35:51 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  6|2
total_score: 45/70
7a349a8
Wed 15 May 2024 05:38:30 PM UTC: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
fd18467
Sat 18 May 2024 11:24:27 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:147:33: error: ‘Node’ has no member named ‘data’
  147 |          push(stack, adj_current->data);
      |                                 ^~
Compilation failed
6f52aea
Sat 18 May 2024 11:24:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
74e6aa6
Sat 18 May 2024 11:25:37 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:160:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  160 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
6d5a59f
Sat 18 May 2024 11:29:06 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|0
total_score: 70/70
6e33e1a
